--- a/frontal.html
+++ b/frontal.html
@@ -109,7 +109,7 @@
         <section class="row">
 		<div class="col-lg-4">FIGURES OF METOPIC SUTURE CLOSURE</div>
 
-            <div class="col-lg-3" id="description">
+            <div class="col-lg-4" id="description">
                 <h3>Frontal bone</h3>
                 <p>In adults and later juvenility, the frontal is one single midline bone. During prenatal growth, the frontal ossifies and develops as two halves separated by the metopic suture.  Studies have shown (CITATIONS) that the metopic sutures normally fuses to create one single frontal bone between the ages of 2 and 4 years.  </p>
             </div>
@@ -117,9 +117,7 @@
             <div class="col-lg-3"> 
 		    <div class="fixed">
                 <h3>Age Estimator</h3>
-                <ul>
-                    <li>Click on the bone group on the diagram of which bone you wish to assess the age.
-                </ul>
+			<p>Click on the bone group on the diagram of which bone you wish to assess the age.</p>
 			    
 		<button onclick="myFunction()">Unfused</button>
 			<p id="unfused"></p>
