--- a/thorax.html
+++ b/thorax.html
@@ -309,7 +309,7 @@
         </div>
             
 	<div class="col-lg-4">
-		<h2><a name="sternum">The Sternum</a></h2>
+		<h2><a name="sternum1">The Sternum</a></h2>
 		<p>Primary ossification centers for vertebrae C3-C7 appear in utero and are present at birth.  Like all other vertebrae (except for C1 and C2), there are three primary ossification centers: 2 half <b>neural arches</b> and the <b>centrum</b>.</p>
 		<p>The two half neural arches fuse together around age two (CITATION).  Around ages three to four years, the neural arch fuses to the centrum (CITATION).  Additionally, there are five epiphyses that appear and fuse during puberty: 2 annular rings that occur on the superior and inferior surfaces of the centrum, 2 epiphyses on the ends of the transverse processes, and 1 epiphysis on the tip of the spinous process (CITATIONS).</p>
 	</div>
