--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -101,7 +101,7 @@
 
         <!-- Portfolio Item Row -->
         <section class="row">
-		<div id="col-lg-6">
+		<div id="col-md-5">
 			<?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 <svg width="142.35mm" height="116.75mm" version="1.1" viewBox="0 0 142.34691 116.75323" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
@@ -149,7 +149,7 @@
 </div>
 			
 
-            <div class="col-lg-4">
+            <div class="col-md-6">
                 <h3>Bones of the pelvic girdle</h3>
                 <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
             </div>
