--- a/skull.html
+++ b/skull.html
@@ -237,20 +237,11 @@
 			
 			<p>Estimated Age Range:<input type="text" id="age-range" value="" size=30></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
-				<br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2-4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2-4 years of age';">
 
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
-			
-			<button onclick="myFunction()">Unfused</button>
-			<p id="unfused"></p>
-			    
-	    		<button onclick="myFunction()">Fusing</button>
-			<p id="fusing"></p>
-			    
-			<button onclick="myFunction()">Completely Fused</button>
-			<p id="fused"></p>
+				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
 		</div>
 	</div>
 </section>
