--- a/skull.html
+++ b/skull.html
@@ -239,7 +239,7 @@
 			
 				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2-4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
 
 				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
 				<br>
