--- a/skull.html
+++ b/skull.html
@@ -242,7 +242,9 @@
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
 
 				<br><br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
-				<br>
+			
+				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='';">
+			<br>
 		</div>
 	</div>
 </section>
