--- a/index.html
+++ b/index.html
@@ -1991,7 +1991,9 @@
 
             <div class="col-md-3" id="description">
                 <h3>Project Description</h3>
-                <p>This project is aimed at aquainting students of physical anthropology, osteology, and ____ with the different methods used to estimate the age-at-death of human subadult skeletal remains.  </p>
+			<p>Welcome to J-Skel, the digital juvenile skeletal age estimator. This project is aimed at acquainting students of physical anthropology and human osteology with a few of the different methods used to estimate the age-at-death of human subadult skeletal remains.</p>
+			<p>Due to their complex growth and development, subadult remains are rarely addressed in introductory osteology courses and even infrequently studied in advanced classes as well.  As a result, some osteologists and physical anthropologists are relatively unfamiliar with subadult osteology when remains are encountered in the field or lab.  However, it is their complex development that allows to more accurately estimate the age of subadult remains compared to those of an adult.  For this project, epiphyseal fusion will be the main aging technique, but will also touch upon tooth formation and eruption and eruption as well as the appearance of ossification centers.</p>
+			<p>Research involving subadult skeletal remains has taken off in the past few decades, but there is still a bias.  Most of the studies published, and most that are used in this project, are from white European or European American samples.  As the research corpus expands, more regional studies are being conducted and tailored to specific geographically and culturally bounded populations.</p>
             </div>
             
             <div class="col-md-3" id="instruction">
